examples/test/testpolicy9711.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9711
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key35: value14
      key34: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value42
          key3: value16
          key29: value32
      podSelector:
        matchLabels:
          key38: value10
          key46: value12
